Oppdaterte alle filene for andre gang

--- a/Portefolie/prosjekter.html
+++ b/Portefolie/prosjekter.html
@@ -18,7 +18,7 @@
 
     <div class="wrapper">
         <div class="hobbies" id="Hobbies">
-         <div id="title"><h2>Noen av mine prosjekter</h2></div>
+         <div id="title"><h2>Prosjekter</h2></div>
          <div id="food"><img src="IMG_list.jpg" alt="En som skriver i en notatbok"></div>
          <div id="foodText">Denne nettsiden inneholder en liste med rekker data du kan sette inn og lage din egen liste! Her har jeg mest forkus på java script. <br><a href="/Chapter4/jornErSyk/index2.html">Se mer</a></div>
          <div id="activities"><img src="IMG_bee.jpg" alt="En bie på en blomst"></div>
